// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<div
  className="TestWrapper__Container-sc-1mof8la-0 fadnqN"
>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 fZUWKh sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>
</div>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
<div
  className="TestWrapper__Container-sc-1mof8la-0 fadnqN"
>
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 fZUWKh sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h2>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 iSXpDV sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 dDfrjn sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 iHaONW sinoui-typography sinoui-typography--h4"
    color="success"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 iwjdPS sinoui-typography sinoui-typography--h4 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>
</div>
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
<div
  className="TestWrapper__Container-sc-1mof8la-0 fadnqN"
>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 fZUWKh sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 kRyMya sinoui-typography sinoui-typography--h4"
    color="primary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 cfXcPr sinoui-typography sinoui-typography--h4"
    color="secondary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 fZUWKh sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 jlEbdZ sinoui-typography sinoui-typography--h4"
    color="textSecondary"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 hNNBdy sinoui-typography sinoui-typography--h4"
    color="error"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 dNeVuI sinoui-typography sinoui-typography--h4"
    color="warning"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 iHaONW sinoui-typography sinoui-typography--h4"
    color="success"
    type="h4"
  >
    H4
  </h4>
  <h4
    className="Typography__TypographyWrapper-sc-12agh80-0 bPSpHQ sinoui-typography sinoui-typography--h4"
    color="info"
    type="h4"
  >
    H4
  </h4>
</div>
`;
